fixed several spacing issues

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -45,7 +45,7 @@
   }
 
   #hero {
-    margin-top: 6em;
+    min-height: 90vh;
     ul {
       width: 75%;
       grid-row: 1/2;
