--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -19,7 +19,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 35px 20px;
     margin: 2em 40px;
-    padding-top: 4em;
+    padding-top: 5em;
     h2 {
       grid-column: 1/3;
     }
@@ -60,7 +60,9 @@
   #hero {
     margin-top: 3em;
     box-sizing: border-box;
+    min-height: 95vh;
     ul {
+      margin-top: 5rem;
       grid-column: 2/3;
     }
 
@@ -89,6 +91,10 @@
     .tool {
       margin-bottom: 2em;
     }
+  }
+
+  #certificates {
+    padding-top: 3em;
   }
 
   #contact {
